--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -15,4 +14,5 @@
   <body>
     <div id="root"></div>
   </body>
+  <script src="https://use.fontawesome.com/87ec89ebd2.js"></script>
 </html>
